# qumupam

./: .gitignore  README.md  pyproject.toml  qumupam.py  qumupam.spec  requirements.txt  setup.py
.github/workflows/: pyinstaller.yml
qumupam/: __main__.py  utilities.py
